Fix contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  color: #272829;
+  color: #535b45;
 }
 
 a {
@@ -71,7 +71,7 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #fff;
+  background: #f2f3f5;
 }
 
 #preloader:before {
@@ -133,7 +133,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 992px) {
   #header {
     width: 300px;
-    background: #fff;
+    background: #f2f3f5;
     border-right: 1px solid #e6e9ec;
     left: -300px;
   }
